attempt to add an outputFormat parameter
